--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,38 +1,44 @@
 <section class="vh-100" style="background-color:#9A616D;">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col col-xl-10">
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
           <div class="card" style="border-radius: 1rem;">
             <div class="row g-0">
               
-              <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 d-flex align-items-center">
                 <div class="card-body p-4 p-lg-5 text-black">
   
                   <form>
   
-                    <div class="d-flex align-items-center mb-3 pb-1">
+                    <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 d-flex align-items-center mb-3 pb-1">
                       <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                       <span class="h1 fw-bold mb-0">UserApp</span>
                     </div>
   
-                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;"><a class="navbar-brand" href="/">Sign into your account</a></h5>
   
-                    <div class="form-outline mb-4">
-                      <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                    <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 form-outline mb-4">
+                      <input type="text" id="form2Example17" class="form-control form-control-lg" name="userName" [(ngModel)]="userName"/>
                       <label class="form-label" for="form2Example17">USERNAME</label>
                     </div>
   
-                    <div class="form-outline mb-4">
-                      <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                    <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 form-outline mb-4">
+                      <input type="password" id="form2Example27" class="form-control form-control-lg" name="password" [(ngModel)]="password" />
                       <label class="form-label" for="form2Example27">PASSWORD</label>
                     </div>
   
-                    <div class="pt-1 mb-4">
-                      <button class="btn btn-dark btn-lg btn-block" type="button">LOGIN</button>
+                    <div class= "col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 pt-1 mb-4">
+                        
+                        
+                        <a href="/dashboard" class="btn btn-dark btn-lg btn-block" role="button">LOGIN</a>
+                      
+                      
+                      
+                        <!--<button class="btn btn-dark btn-lg btn-block"  type="button" ><a class="navbar-brand" href="/dashboard">LOGIN</a></button>-->
                     </div>
   
                     
-                    <p class="mb-5 pb-lg-2" style="color: #393f81;">New User? <a href="#!" style="color: #393f81;">Register here</a></p>
+                    <p class="mb-5 pb-lg-2" style="color: #393f81;">New User? <a href="/signup" style="color: #393f81;">Register here</a></p>
                     
                   </form>
   
