--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,74 +3,96 @@
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col col-xl-10">
           <div class="card" style="border-radius: 1rem;">
-            <div class="row g-0">
+            <div class="row g-3">
               
-              <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 d-flex align-items-center">
                 <div class="card-body p-4 p-lg-5 text-black">
   
                   <form>
   
                     
-                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign Up!</h5>
+                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;"><b> Sign Up!</b></h5>
   
                     <div class="form-outline mb-4">
-                      <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                      
                       <label class="form-label" for="form2Example17">NAME</label>
+                      <input type="text" id="form2Example17" class="form-control form-control-lg" />
                     </div>
   
                     <div class="form-outline mb-4">
-                      <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                      
                       <label class="form-label" for="form2Example27">PHONE NUMBER</label>
+                      <input type="text" id="form2Example27" class="form-control form-control-lg" />
                     </div>
 
                     <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
                         <label class="form-label" for="form2Example17">GENDER</label>
+                        <select name="" id="form2Example17" class="form-control form-control-lg">
+                            <option value="">FEMALE</option>
+                            <option value="">MALE</option>
+                            
+                        </select>
+                       
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                       
                         <label class="form-label" for="form2Example17">EMAIL</label>
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                        
                         <label class="form-label" for="form2Example17">ADDRESS</label>
+                        <textarea name="" id="form2Example17" cols="30" rows="10" class="form-control form-control-lg"></textarea>
+                        
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                        
                         <label class="form-label" for="form2Example17">PINCODE</label>
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
                         <label class="form-label" for="form2Example17">BLOOD GROUP</label>
+                        <!--<input type="email" id="form2Example17" class="form-control form-control-lg" />-->
+                        <select name="" id="form2Example17" class="form-control form-control-lg">
+                            <option value="">A+ve</option>
+                            <option value="">B+ve</option>
+                            <option value="">O+ve</option>
+                        </select>
+                        
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                        
                         <label class="form-label" for="form2Example17">DATE OF BIRTH</label>
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                        
                         <label class="form-label" for="form2Example17">AGE</label>
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                        
                         <label class="form-label" for="form2Example17">PARENT NAME</label>
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                       
                         <label class="form-label" for="form2Example17">PASSWORD</label>
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
                       </div>
 
                       <div class="form-outline mb-4">
-                        <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                        
                         <label class="form-label" for="form2Example17">CONFIRM PASSWORD</label>
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
                       </div>
   
                     <div class="pt-1 mb-4">
@@ -78,7 +100,7 @@
                     </div>
   
                     
-                    <p><a href="#!" style="color: #393f81;">GO TO LOGIN PAGE</a></p>
+                    <p><a href="/" style="color: #393f81;">GO TO LOGIN PAGE</a></p>
                     
                   </form>
   
