--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -16,20 +16,20 @@
                     <div class="form-outline mb-4">
                       
                       <label class="form-label" for="form2Example17">NAME</label>
-                      <input type="text" id="form2Example17" class="form-control form-control-lg" />
+                      <input type="text" id="form2Example17" class="form-control form-control-lg" name="name" [(ngModel)]="name" />
                     </div>
   
                     <div class="form-outline mb-4">
                       
                       <label class="form-label" for="form2Example27">PHONE NUMBER</label>
-                      <input type="text" id="form2Example27" class="form-control form-control-lg" />
+                      <input type="text" id="form2Example27" class="form-control form-control-lg" name="mobile" [(ngModel)]="mobile"/>
                     </div>
 
                     <div class="form-outline mb-4">
                         <label class="form-label" for="form2Example17">GENDER</label>
-                        <select name="" id="form2Example17" class="form-control form-control-lg">
-                            <option value="">FEMALE</option>
-                            <option value="">MALE</option>
+                        <select name="" id="form2Example17" class="form-control form-control-lg" name="gender" [(ngModel)]="gender">
+                            <option value="FEMALE">FEMALE</option>
+                            <option value="MALE">MALE</option>
                             
                         </select>
                        
@@ -38,29 +38,29 @@
                       <div class="form-outline mb-4">
                        
                         <label class="form-label" for="form2Example17">EMAIL</label>
-                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" name="email" [(ngModel)]="email"/>
                       </div>
 
                       <div class="form-outline mb-4">
                         
                         <label class="form-label" for="form2Example17">ADDRESS</label>
-                        <textarea name="" id="form2Example17" cols="30" rows="10" class="form-control form-control-lg"></textarea>
+                        <textarea name="" id="form2Example17" cols="30" rows="10" class="form-control form-control-lg" name="address" [(ngModel)]="address"></textarea>
                         
                       </div>
 
                       <div class="form-outline mb-4">
                         
                         <label class="form-label" for="form2Example17">PINCODE</label>
-                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" name="pincode" [(ngModel)]="pincode"/>
                       </div>
 
                       <div class="form-outline mb-4">
                         <label class="form-label" for="form2Example17">BLOOD GROUP</label>
                         <!--<input type="email" id="form2Example17" class="form-control form-control-lg" />-->
-                        <select name="" id="form2Example17" class="form-control form-control-lg">
-                            <option value="">A+ve</option>
-                            <option value="">B+ve</option>
-                            <option value="">O+ve</option>
+                        <select name="" id="form2Example17" class="form-control form-control-lg" name="blood" [(ngModel)]="blood">
+                            <option value="A+ve">A+ve</option>
+                            <option value="B+ve">B+ve</option>
+                            <option value="O+ve">O+ve</option>
                         </select>
                         
                       </div>
@@ -68,35 +68,35 @@
                       <div class="form-outline mb-4">
                         
                         <label class="form-label" for="form2Example17">DATE OF BIRTH</label>
-                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
+                        <input type="date" id="form2Example17" class="form-control form-control-lg"name="dob" [(ngModel)]="dob" />
                       </div>
 
                       <div class="form-outline mb-4">
                         
                         <label class="form-label" for="form2Example17">AGE</label>
-                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" name="age" [(ngModel)]="age"/>
                       </div>
 
                       <div class="form-outline mb-4">
                         
                         <label class="form-label" for="form2Example17">PARENT NAME</label>
-                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
+                        <input type="text" id="form2Example17" class="form-control form-control-lg" name="parent" [(ngModel)]="parent"/>
                       </div>
 
                       <div class="form-outline mb-4">
                        
                         <label class="form-label" for="form2Example17">PASSWORD</label>
-                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
+                        <input type="password" id="form2Example17" class="form-control form-control-lg" name="password" [(ngModel)]="password"/>
                       </div>
 
                       <div class="form-outline mb-4">
                         
                         <label class="form-label" for="form2Example17">CONFIRM PASSWORD</label>
-                        <input type="text" id="form2Example17" class="form-control form-control-lg" />
+                        <input type="password" id="form2Example17" class="form-control form-control-lg" name="confirm" [(ngModel)]="confirm" />
                       </div>
   
                     <div class="pt-1 mb-4">
-                      <button class="btn btn-dark btn-lg btn-block" type="button">REGISTER</button>
+                      <button class="btn btn-dark btn-lg btn-block" type="button" (click)="readValues()" >REGISTER</button>
                     </div>
   
                     
