--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,12 +5,37 @@
 
                 <div class="row">
                     <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                        <!-- As a link -->
-                            <nav class="navbar bg-light">
-                                <div class="container-fluid">
-                                <a class="navbar-brand" href="/">BACK</a>
-                                </div>
-                            </nav>
+                       
+
+
+
+                      <nav class="navbar navbar-expand-lg bg-light">
+                        <div class="container-fluid">
+                          <a class="navbar-brand" href="/">BACK</a>
+                          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                          </button>
+                          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/cart">PROSUCT LIST</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#"></a>
+                              </li>
+                              
+                              <li class="nav-item">
+                                <a class="nav-link disabled"></a>
+                              </li>
+                            </ul>
+                            <form class="d-flex" role="search">
+                              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                              <button class="btn btn-outline-success" type="submit">Search</button>
+                            </form>
+                          </div>
+                        </div>
+                      </nav>
+
 
                     </div>
                     <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
@@ -36,9 +61,10 @@
                               <span class="visually-hidden">Next</span>
                             </button>
                           </div>
+                          </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    
 </section>
