--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -12,7 +12,7 @@
   
                     <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 d-flex align-items-center mb-3 pb-1">
                       <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                      <span class="h1 fw-bold mb-0">UserApp</span>
+                      <span class="h1 fw-bold mb-0">SHOPPING APP</span>
                     </div>
   
                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;"><a class="navbar-brand" href="/">Sign into your account</a></h5>
@@ -34,7 +34,7 @@
                     <div class= "col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 pt-1 mb-4">
                         
                         
-                        <a href="/dashboard" class="btn btn-dark btn-lg btn-block" role="button" (click)="readValues()">LOGIN</a>
+                        <button class="btn btn-dark btn-lg btn-block" role="button" (click)="readValues()">LOGIN</button>
                       
                       
                       
